# ctxmap

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contextmap/: __init__.py  analysis.py  builder.py  cli.py  context.py  installer.py  parser.py  semantic.py  server.py  store.py
ctxmap/: __init__.py  analysis.py  builder.py  cli.py  context.py  installer.py  parser.py  semantic.py  server.py
skills/: SKILL.md
tests/: test_analysis.py  test_builder.py  test_context.py  test_parser.py  test_store.py
