[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxmap"
version = "0.1.0"
description = "Self-maintaining context map for AI coding assistants. Replaces CLAUDE.md with a file that updates itself on every git commit."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "claude-code", "context", "ai-coding", "knowledge-graph",
    "mcp", "tree-sitter", "claude", "copilot", "cursor",
    "token-reduction", "codebase-context"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "networkx>=3.2",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
semantic = ["anthropic>=0.30"]
video = ["faster-whisper>=1.0", "yt-dlp>=2024.1"]
communities = ["graspologic>=3.3"]
embeddings = ["sentence-transformers>=3.0"]
all = ["ctxmap[semantic,video,communities,embeddings]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
ctxmap = "ctxmap.cli:main"

[project.urls]
Homepage = "https://github.com/avstrix/ctxmap"
Repository = "https://github.com/avstrix/ctxmap"
Issues = "https://github.com/avstrix/ctxmap/issues"
Changelog = "https://github.com/avstrix/ctxmap/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
